Fix bug [#850337] Image stretched

--- a/public/css/sharedfarm.less
+++ b/public/css/sharedfarm.less
@@ -17,6 +17,10 @@
 	}
 }
 
+#sliderImages {
+	max-height: 300px;
+}
+
 .item > .menuRedPush {
 	margin: 0 !important;
     margin-top: 2px !important;
